RESOLVED FIXED78479
[GTK] File system api build is broken
https://bugs.webkit.org/show_bug.cgi?id=78479
Summary [GTK] File system api build is broken
ChangSeok Oh
Reported 2012-02-13 02:59:22 PST
When I tried to build with the file system api feature, I faced the issue like following. >make: *** No rule to make target `../../Source/WebCore/fileapi/WebKitFlags.idl', needed by `DerivedSources/WebCore/supplemental_dependency.tmp'. Stop.
Attachments
Patch (11.91 KB, patch)
2012-02-15 10:37 PST, ChangSeok Oh
no flags
Patch (11.94 KB, patch)
2012-02-15 18:52 PST, ChangSeok Oh
no flags
Patch (11.92 KB, patch)
2012-02-16 08:46 PST, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2012-02-15 10:37:01 PST
WebKit Review Bot
Comment 2 2012-02-15 10:39:10 PST
Attachment 127199 [details] did not pass style-queue: Failed to run "['Tools/Scripts/update-webkit']" exit_code: 2 Updating OpenSource git.webkit.org[0: 17.254.20.231]: errno=Connection refused fatal: unable to connect a socket (Connection refused) Died at Tools/Scripts/update-webkit line 162. If any of these errors are false positives, please file a bug against check-webkit-style.
ChangSeok Oh
Comment 3 2012-02-15 18:52:27 PST
Philippe Normand
Comment 4 2012-02-16 08:27:21 PST
Comment on attachment 127294 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127294&action=review Just few nits in the ChangeLog. The patch looks good but it'd be nice to have green style-bot bubble. > Source/WebCore/ChangeLog:9 > + AIK, bug58443 also dealt with it, but it looks like the submitted patch AIK ? > Source/WebCore/ChangeLog:10 > + is needed to update. To do that, I think I need to discuss with the original author. needs to be updated.
ChangSeok Oh
Comment 5 2012-02-16 08:46:43 PST
ChangSeok Oh
Comment 6 2012-02-16 08:49:07 PST
Comment on attachment 127294 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=127294&action=review Thank you! :) >> Source/WebCore/ChangeLog:9 >> + AIK, bug58443 also dealt with it, but it looks like the submitted patch > > AIK ? As I Know... sorry :p >> Source/WebCore/ChangeLog:10 >> + is needed to update. To do that, I think I need to discuss with the original author. > > needs to be updated. Done.
Philippe Normand
Comment 7 2012-02-16 08:56:37 PST
Comment on attachment 127388 [details] Patch LGTM, will cq+ after GTK ews gets green!
WebKit Review Bot
Comment 8 2012-02-16 15:33:02 PST
Comment on attachment 127388 [details] Patch Clearing flags on attachment: 127388 Committed r107986: <http://trac.webkit.org/changeset/107986>
WebKit Review Bot
Comment 9 2012-02-16 15:33:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.